<resources>
    <string name="app_name">TikTalk</string>
    <string name="login_editText_username">Username</string>
    <string name="login_editText_password">Password</string>
    <string name="login_button">Login</string>
    <string name="logo_text">TikTalk</string>
    <string name="logo_img">logo</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_pic">profile_pic</string>
    <string name="register_btn">Register</string>
    <string name="registration_header">Registration</string>
    <string name="password_requirements">Your password must contain:\n - At least 8 characters\n - At least one lowercase\n - At least one uppercase\n - At least one number</string>
    <string name="login_error_msg">Invalid username or password</string>
    <string name="not_registered1">Not registered?</string>
    <string name="not_registered2">Click here</string>
    <string name="not_registered3">to register</string>
    <string name="add_contact_header">Add Contact</string>
    <string name="server">Server</string>
    <string name="add_contact_btn">Add</string>
    <string name="settings_header">Settings</string>
    <string name="save">Save</string>
    <string name="update">update</string>
    <string name="update_contact">Update Contact</string>
    <string name="BaseUrl">http://10.0.2.2:5051/api/</string>
    <string name="send">Send</string>
    <string name="settings">settings</string>

</resources>