<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#deedd5"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/registration_header"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <EditText
            android:id="@+id/registrationUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/login_editText_username"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/registrationNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            android:minHeight="48dp" />


        <EditText
            android:id="@+id/registrationPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/login_editText_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/password_requirements"
            android:paddingBottom="10dp" />

        <EditText
            android:id="@+id/registrationConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_pic"
            android:paddingBottom="15dp"
            android:background="#aeb4b7"
            android:padding="5dp"
            app:srcCompat="@drawable/default_image"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/register_btn"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#617a74"
            android:text="@string/register_btn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>