<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:background="#deedd5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:contentDescription="@string/logo_img"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="20dp"
                android:scaleX="2"
                android:scaleY="2"
                app:srcCompat="@drawable/ic_bubble"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="625dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/logo_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/login_editText_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/login_editText_username"
            android:inputType="textPersonName"
            android:minHeight="48dp" />


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#617a74"
            android:text="@string/login_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>