<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".activityLogic.UpdateContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#deedd5"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/update_contact"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


        <EditText
            android:id="@+id/et_updateContactNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            android:minHeight="48dp" />


        <Button
            android:id="@+id/update_contact_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#617a74"
            android:textColor="#deedd5"
            android:text="@string/update" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>